[package]
name = "misaka-test"
version = "0.1.0"
authors = ["learntocode1024 <misaka18931@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"